unpackaged/main/default/objects/SPARTADMS__Box_Users__c/SPARTADMS__Box_Users__c.object-meta.xml
<CustomObject>
    <description>Users</description>
    <label>DMS User</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>