unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__Access_Token__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Access_Token__c</fullName>
        <description>Access Token</description>
        <inlineHelpText>Access Token</inlineHelpText>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>