unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__Access_Token_Expire_DateTime__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Access_Token_Expire_DateTime__c</fullName>
        <description>Access Token Expire DateTime</description>
        <inlineHelpText>Access Token Expire DateTime</inlineHelpText>
        <label>Access Token Expire DateTime</label>
        <type>DateTime</type>
    </CustomField>