unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__Box_UserId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Box_UserId__c</fullName>
        <description>Box User Id</description>
        <inlineHelpText>User Id</inlineHelpText>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>