unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__Group_Membership_Id__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Group_Membership_Id__c</fullName>
        <description>Group Membership Id</description>
        <inlineHelpText>Group Membership Id</inlineHelpText>
        <label>Group Membership Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>