unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__Is_Root_Admin__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_Root_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Root Admin</description>
        <inlineHelpText>Is Root Admin</inlineHelpText>
        <label>Is Root Admin</label>
        <type>Checkbox</type>
    </CustomField>