unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__IsActive__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Active</description>
        <inlineHelpText>Is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>