unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__Profile_Name__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Profile_Name__c</fullName>
        <description>Profile Name</description>
        <inlineHelpText>Profile Name</inlineHelpText>
        <label>Profile Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>