unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__Related_Salesforce_User__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Salesforce User</description>
        <inlineHelpText>Related Salesforce User</inlineHelpText>
        <label>Related Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Box_Users</relationshipName>
        <type>Lookup</type>
    </CustomField>