unpackaged/main/default/objects/SPARTADMS__Box_Users__c/fields/SPARTADMS__User_Name__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__User_Name__c</fullName>
        <description>Display the username of related salesforce user</description>
        <formula>SPARTADMS__Related_Salesforce_User__r.Username</formula>
        <inlineHelpText>Display the username of related salesforce user</inlineHelpText>
        <label>User Name</label>
        <type>Text</type>
    </CustomField>