unpackaged/main/default/objects/SPARTADMS__Box_Users__c/validationRules/SPARTADMS__User_Creation_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>SPARTADMS__User_Creation_Validation</fullName>
        <active>true</active>
        <description>User Creation Validation</description>
        <errorConditionFormula>ISBLANK(SPARTADMS__Box_UserId__c)</errorConditionFormula>
        <errorMessage>User can not be created</errorMessage>
    </ValidationRule>