unpackaged/main/default/objects/SPARTADMS__Box_Users__c/listViews/SPARTADMS__All.listView-meta.xml
<ListView>
        <fullName>SPARTADMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>